Fix companion overlap

--- a/public/css/catHelper.css
+++ b/public/css/catHelper.css
@@ -2,7 +2,8 @@
   position: absolute;
   top: 213px;
   left: 50%;
-  transform: translateX(-50%);
+  /* Allow JS to nudge the cat left to avoid overlapping right-side buttons */
+  transform: translateX(calc(-50% - var(--cat-shift, 0px)));
   z-index: 999;
   display: inline-block;
   height: 150px;
